# plant-assistant

./: .editorconfig  .env.example  .gitignore  .gitmodules  .pre-commit-config.linux.yaml  .pre-commit-config.windows.yaml  .pre-commit-config.yaml  CHANGELOG.md  CHATBOT_ENHANCEMENT_GUIDE.md  CONTRIBUTING.md  ENHANCED_CHAT_SUCCESS.md  ENHANCED_CHAT_SUMMARY.md  ENVIRONMENT.md  GITHUB_CI_SETUP.md  Makefile  PLAYWRIGHT_TESTING_REPORT.md  README.md  SECURITY.md  STRUCTURE.md  docker-compose.yml  mcp.config.json  prod-frontend-deploy.yml
backend/: .env.example  .env.test  .gitignore  .watchmanconfig  Dockerfile  README.md  alembic.ini  check_tables.py  create_sample_chat_data.py  mypy.ini  pyproject.toml  requirements.txt  start.sh  watcher.py
backend/.run/: Backend - UV FastAPI Dev.run.xml
backend/shared-data/: openapi.json
backend/src/: main.py
backend/src/app/: config.py  database.py  email.py  main.py  schemas.py  users.py  utils.py
backend/src/auth/: dependencies.py  models.py  oauth.py  providers.py  schemas.py
backend/src/care/: constants.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/src/chat/: __init__.py  agent.py  models.py  schemas.py  service.py  state.py  tools.py
backend/src/commands/: generate_openapi_schema.py  seed_plant_knowledge.py
backend/src/conversations/: models.py  router.py  schemas.py  service.py
backend/src/core/: config.py  logging.py  models.py  security.py  startup.py
backend/src/database/: base.py  health.py  pinecone.py  session.py
backend/src/diagnosis/: constants.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/src/feedback/: __init__.py  models.py
backend/src/identification/: constants.py  exceptions.py  router.py  schemas.py  service.py
backend/src/plants/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
backend/src/podcast/: context_service.py  router.py  schemas.py  service.py  utils.py  utils_new.py
backend/src/reminders/: constants.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/src/shared/: exceptions.py  utils.py
backend/src/species/: models.py
backend/src/tracking/: constants.py  exceptions.py  router.py  schemas.py  service.py
backend/src/vertors/: models.py
backend/tests/: conftest.py  test_database.py  test_email.py
backend/tests/commands/: test_generate_openapi_schema.py
backend/tests/main/: test_main.py
backend/tests/routes/: test_diagnose.py  test_items.py
(+205 files in other folders)
